AssignmentGit/force-app/main/default/objects/New_Product_Entry__e/fields/Name_Of_The_Product__c.field-meta.xml
<CustomField>
    <fullName>Name_Of_The_Product__c</fullName>
    <label>Name Of The Product</label>
    <length>50</length>
    <type>Text</type>
</CustomField>