AssignmentGit/force-app/main/default/objects/New_Product_Entry__e/fields/Product_Id__c.field-meta.xml
<CustomField>
    <fullName>Product_Id__c</fullName>
    <label>Product Id</label>
    <length>50</length>
    <type>Text</type>
</CustomField>